Initial client class and logic for user selection and card insertion

--- a/00 Cajero - Proyecto/index.html
+++ b/00 Cajero - Proyecto/index.html
@@ -66,13 +66,13 @@
       </aside>
     </section>
     <section id="cash">
-        <img src="images/MoneyOff.svg" alt="" id="cashWithdrawal">
+      <img src="images/MoneyOff.svg" alt="" id="cashWithdrawal" />
     </section>
     <section id="controlPanel">
       <img src="images/GNB.png" alt="Goliath National Bank Logo" id="ATMLogo" />
       <section id="insertCard">
         <img src="images/cardButton.svg" alt="Icon to insert card" />
-        <img src="images/cardSlotOff.svg" alt="Card slot" />
+        <img src="images/cardSlotOff.svg" alt="Card slot" id="CardSlot" class="cardSlotOff"/>
       </section>
       <section id="offset">
         <section id="keyboard">
@@ -183,5 +183,7 @@
         </section>
       </section>
     </section>
+
+    <script src="script.js"></script>
   </body>
 </html>
