Included transaction class as a independent file, configured menu buttons and main menu

--- a/00 Cajero - Proyecto/index.html
+++ b/00 Cajero - Proyecto/index.html
@@ -11,25 +11,25 @@
       <aside id="leftButtons">
         <img
           src="images/LeftButton.svg"
-          class="botonCajero"
+          class="botonCajeroLeft"
           id="botonIzq1"
           alt="Botón de cajero"
         />
         <img
           src="images/LeftButton.svg"
-          class="botonCajero"
+          class="botonCajeroLeft"
           id="botonIzq2"
           alt="Botón de cajero"
         />
         <img
           src="images/LeftButton.svg"
-          class="botonCajero"
+          class="botonCajeroLeft"
           id="botonIzq3"
           alt="Botón de cajero"
         />
         <img
           src="images/LeftButton.svg"
-          class="botonCajero"
+          class="botonCajeroLeft"
           id="botonIzq4"
           alt="Botón de cajero"
         />
@@ -41,25 +41,25 @@
       <aside id="rightButtons">
         <img
           src="images/RightButton.svg"
-          class="botonCajero"
+          class="botonCajeroRight"
           id="botonDer1"
           alt="Botón de cajero"
         />
         <img
           src="images/RightButton.svg"
-          class="botonCajero"
+          class="botonCajeroRight"
           id="botonDer2"
           alt="Botón de cajero"
         />
         <img
           src="images/RightButton.svg"
-          class="botonCajero"
+          class="botonCajeroRight"
           id="botonDer3"
           alt="Botón de cajero"
         />
         <img
           src="images/RightButton.svg"
-          class="botonCajero"
+          class="botonCajeroRight"
           id="botonDer4"
           alt="Botón de cajero"
         />
@@ -183,7 +183,7 @@
         </section>
       </section>
     </section>
-
+    <script src="Transaction.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
